# LegendOfNeutrinos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Borexino/src/src/: CMakeLists.txt  strip_input.C  strip_input_python.C
